# numpython

./: ch02-code-listing.ipynb  pyproject.toml  test.ipynb  单变量非线性方程求解.ipynb
