[tool.poetry]
name = "numpython"
version = "0.1.0"
description = ""
authors = ["kyrie1218 <kyrie1218@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.25.1"
scipy = "^1.11.1"
matplotlib = "^3.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
